--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "querystringify": "^2.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.2",
+    "@angular-devkit/build-angular": "^0.12.4",
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "~7.2.0",
@@ -44,6 +45,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "^3.4.3"
   }
 }
